Trying to style info windows with CSS, haven't been able to properly edit the partyMarker div yet however

--- a/frontend/styles/nightlife.css
+++ b/frontend/styles/nightlife.css
@@ -106,3 +106,16 @@ label {
     position: absolute;
     width: 1px;
   }
+
+
+div#partyMarker{
+    color: #FF0000;
+}
+
+.partyMarker{
+    background-color: #FF0000;
+}
+
+.partyMarkerHeading{
+    background-color: #FF0000;
+}
